--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "ember-countup",
-  "version": "0.0.6",
-  "description": "The default blueprint for ember-cli addons.",
+  "name": "ember-cli-countup",
+  "version": "0.0.1",
+  "description": "A countUp.js integration for Ember.",
   "keywords": [
     "ember-addon"
   ],
@@ -21,7 +21,7 @@
     "ember-cli-babel": "^6.3.0",
     "broccoli-funnel": "^2.0.1",
     "broccoli-merge-trees": "^2.0.0",
-    "broccoli-stew":"^1.5.0",
+    "broccoli-stew": "^1.5.0",
     "countup.js": "1.7.1"
   },
   "devDependencies": {
